examples/miscellaneous/runtime_classes.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-1
spec:
  template:
    spec:
      runtimeClassName: runc
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-2
spec:
  template:
    spec:
      runtimeClassName: gvisor
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds-3
spec:
  template:
    spec:
      runtimeClassName: kata
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-1
spec:
  template:
    spec:
      runtimeClassName: runc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2
spec:
  template:
    spec:
      runtimeClassName: gvisor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-3
spec:
  template:
    spec:
      runtimeClassName: kata
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
spec:
  runtimeClassName: runc
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
spec:
  runtimeClassName: gvisor
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
spec:
  runtimeClassName: kata
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-1
spec:
  template:
    spec:
      runtimeClassName: runc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-2
spec:
  template:
    spec:
      runtimeClassName: gvisor
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-3
spec:
  template:
    spec:
      runtimeClassName: kata
