examples/miscellaneous/network_policies.yaml
# From https://github.com/NickSchleicher/k8d/blob/master/example/sample_policies.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: default
  labels:
    app: myapp-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod2
  namespace: default
  labels:
    app: myapp-pod2
spec:
  containers:
  - name: myapp-container
    image: byrnedo/alpine-curl
    command: ["/bin/sh"]
    args: ["-c", "sleep 36000"]

---

apiVersion: v1
kind: Service
metadata:
  name: myapp-pod
  namespace: default
  labels:
    app: myapp-pod
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: myapp-pod

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: myapp-pod-to-myapp-pod2
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: myapp-pod
  ingress:
  - from:
    - ipBlock:
        cidr: 1.1.1.1/32
    - ipBlock:
        cidr: 2.2.2.2/32
    - podSelector:
        matchLabels:
          app: myapp-pod2
    ports:
    - port: 80
      protocol: UDP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress

# default deny ingress is overwritten by explicit allow ingress policies
# default allow ingress overwrites specific deny (explicit)
# default deny egress is overwritten by explicit allow egress policies
# default allow egress overwrites specific deny egress (explicit)
